<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/layoutToolbar"
        layout="@layout/layout_toolbar_common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1dp"
        android:background="@color/black_5"
        app:layout_constraintTop_toBottomOf="@+id/hcv_header" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24dp"
                android:text="@string/contact_us_by_phone"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_card_hot_line"
                layout="@layout/layout_card_hot_line" />

            <View
                style="@style/TextAppearance.Compat.Notification.Line2"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:background="@color/gray_100" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24dp"
                android:text="@string/contact_via_email"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/description_about_contact_detail" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_send_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:background="@drawable/bg_border_blue_interactive_radius_62dp"
                android:text="@string/send_email"
                android:textColor="@color/blue_interactive" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
