<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onboard_welcome.OnBoardFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_onboard_welcome"
            app:layout_constraintBottom_toTopOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/v1_welcome_onboard"
            android:textAlignment="center"
            android:textColor="@color/boldBlue"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/guideline4" />

        <TextView
            android:id="@+id/tvReady"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/v1_ready_to_get_closer_to_the_app"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <Button
            android:id="@+id/btnLetGo"
            style="@style/commonButtonCornerMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/v1_let_go"
            android:textSize="16sp"
            android:textColor="@color/boldBlue"
            app:layout_constraintTop_toBottomOf="@id/tvReady" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
