<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_gravity="center"
    android:layout_marginHorizontal="32dp"
    android:background="@drawable/bg_common_dialog_round_16dp">

    <TextView
        android:id="@+id/tvAddDepartmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/add_department"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginTop="@dimen/_30dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddDepartmentTitle"
        app:tint="@color/babyBlue"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edtNameDepartment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:background="@drawable/bg_round_6dp_border_2dp"
        android:hint="@string/ex_information_technology"
        android:padding="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:id="@+id/tvErrorTitle"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/edtNameDepartment"
        app:layout_constraintStart_toStartOf="@id/edtNameDepartment"
        app:layout_constraintTop_toBottomOf="@id/edtNameDepartment"
        tools:text="* This field is required" />

    <LinearLayout
        android:id="@+id/btnSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/ivAvatar"
        app:layout_constraintRight_toRightOf="@id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@id/tvErrorTitle">

        <Button
            android:id="@+id/btnBack"
            style="@style/commonButtonCornerSecond"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/v1_back"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnAddDepartment"
            style="@style/commonButtonCornerMain"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="14dp"
            android:text="@string/fragment_edit_profile_confirm"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
