<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="32dp"
    android:background="@drawable/bg_common_dialog_round_16dp">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/ic_log_out"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvTitleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="45dp"
        android:text="@string/v1_do_you_want_to_logout"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/ivAvatar"
        app:layout_constraintRight_toRightOf="@id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

    <LinearLayout
        android:id="@+id/btnSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/ivAvatar"
        app:layout_constraintRight_toRightOf="@id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDialog">

        <Button
            android:id="@+id/btnBack"
            style="@style/commonButtonCornerSecond"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/v1_back"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnLogout"
            style="@style/commonButtonCornerMain"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="14dp"
            android:text="@string/v1_logout"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
