<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/margin_32dp"
    android:background="@drawable/bg_common_dialog_round_16dp">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_30dp"
        android:src="@drawable/ic_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvTitleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivAvatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_30dp"
        android:textStyle="bold"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/timeout_session"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

    <LinearLayout
        android:id="@+id/btnSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitleDialog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDialog">

        <Button
            android:id="@+id/btnLogin"
            style="@style/commonButtonAuthFlow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50dp"
            android:text="@string/title_login"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnSkip"
            style="@style/commonButtonAuthFlow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:backgroundTint="@color/white"
            android:text="@string/S0311_skip"
            android:textAllCaps="false"
            android:textColor="@color/blackRussian" />
    </LinearLayout>
</RelativeLayout>
